syntax = "proto3";

package inventory;

message Product {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
}

message CheckStockRequest {
    string product_id = 1;
    int32 required_quantity = 2;
}

message CheckStockResponse {
    bool is_available = 1;
}

message UpdateStockRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message UpdateStockResponse {
    bool success = 1;
}

service InventoryService {
    rpc CheckStock(CheckStockRequest) returns (CheckStockResponse) {}
    rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse) {}
}