syntax = "proto3";

package order;

message Order {
    string id = 1;
    string product_id = 2;
    int32 quantity = 3;
    string status = 4;
}

message CreateOrderRequest {
    string product_id = 1;
    int32 quantity = 2;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order) {}
}